[Wip] TODO - fix not showing text properly

--- a/src/components/Notes.css
+++ b/src/components/Notes.css
@@ -7,6 +7,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  overflow-y: scroll;
-  max-height: 40vh;
+  /* overflow-y: scroll;
+  max-height: 40vh; */
 }
